--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "manifest_version": 3,
   "name": "Substack Notes Composer",
   "version": "1.0.0",
-  "description": "Publique Notes no Substack diretamente do seu navegador.",
+  "description": "Publique Notes e Rascunhos no Substack diretamente do seu navegador.",
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "popup.html",
     "default_title": "Criar Note"
   },
   "background": {
@@ -17,5 +17,10 @@
   ],
   "host_permissions": [
     "https://substack.com/*"
-  ]
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
