feat: Support custom Substack subdomains
Introduces the ability to specify a Substack subdomain for posting. This allows users to post to their specific Substack publication rather than the default `substack.com` domain.

Changes include:
- Updating `manifest.json` to use a more permissive host permission (`*://*.substack.com/*`).
- Modifying `constants.js` to use a dynamic URL generation function based on the subdomain.
- Refactoring `background.js` to accept the target URL from the message.
- Adding a subdomain input field and associated storage logic in `popup.js` and `popup.html`.
- Adjusting `styles.css` to accommodate the new subdomain input.
- Updating the extension version in `manifest.json`.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Substack Notes Composer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Publique Notes e Rascunhos no Substack diretamente do seu navegador.",
   "action": {
     "default_popup": "popup.html",
@@ -16,6 +16,6 @@
     "storage"
   ],
   "host_permissions": [
-    "https://substack.com/*"
+    "*://*.substack.com/*"
   ]
 }
